# usb-devices

./: .all-contributorsrc  .copier-answers.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  info.py  pyproject.toml  reset.py  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: ci.yml
docs/source/: api.md  conf.py  index.md  installation.md  usage.md
examples/: info.py  reset.py
src/usb_devices/: __init__.py
tests/: test_init.py  test_main.py
